do not use calc to set the width of the pillbox container to avoid jumps on animatino

--- a/scss/partials/_topic_finances.scss
+++ b/scss/partials/_topic_finances.scss
@@ -7,11 +7,6 @@ div.section-container{
     margin-bottom: 10px;
     text-align: center;
 
-    @include big_web(){
-      margin-left: -50px;
-      width: calc(100% + 100px);
-    }
-
     @include mobile(){
       margin-left: -23px;
       width: calc(100% + 46px);
